# Web-scraping-titulos-Naruto-Shippuden-e-renomear-arquivos

./: README.md  pyproject.toml
src/: fix_file_names.py  from_anime_hd.py  from_wikipedia.py  main.py
